DOCS-282 Consolidate component references (#233)

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -9,9 +9,9 @@ Clerk supports sharing sessions across different domains by adding one or many s
 
 Your "primary" domain is where the authentication state lives, and satellite domains are able to securely read that state from the primary domain, enabling a seamless authentication flow across domains.
 
-Users must complete the sign in flow on the primary domain, either using Clerk’s [`<SignIn />`](/docs/authentication/components/sign-in) component or our [`useSignIn()`](/docs/custom-flows/use-sign-up#use-sign-in) hook.
+Users must complete the sign-in flow on the primary domain, either using Clerk’s [`<SignIn />`](/docs/components/authentication/sign-in) component or [`useSignIn()`](/docs/custom-flows/use-sign-up#use-sign-in) hook.
 
-To access authentication state from a satellite domain, users will be transparently redirected to the primary domain. If users need to sign-in, they must be redirected to a sign-in flow hosted on the primary domain, then redirected back to the originating satellite domain.
+To access authentication state from a satellite domain, users will be transparently redirected to the primary domain. If users need to sign in, they must be redirected to a sign in flow hosted on the primary domain, then redirected back to the originating satellite domain.
 
 
 ## How to add Satellite Domains
@@ -28,12 +28,12 @@ To get started, you need to create an Application from the [Clerk Dashboard](htt
 When building your sign-in flow, you must configure it to run within your primary application, e.g. on /sign-in.
 
 <Callout type="info">
-For more information about creating your application, check out our [detailed guide](/docs/quickstarts/setup-clerk).
+  For more information about creating your application, check out Clerk's [detailed guide](/docs/quickstarts/setup-clerk).
 </Callout>
 
 ### Add your first satellite domain
 
-Go to the **Domains** tab in the Clerk dashboard and add a new satellite domain of your choice. Then, follow the instructions provided.
+Go to the [Domains](https://dashboard.clerk.com/last-active?path=domains) tab in the Clerk dashboard and add a new satellite domain of your choice. Then, follow the instructions provided.
 
 For the purposes of this guide, the satellite domain will be "satellite.dev".
 
