--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -3,62 +3,55 @@ title: User
 description: The User object holds all the information for a user of your application and provides a set of methods to manage their account. Users have a unique authentication identifier which might be their email address, phone number or a username.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `User`
 
-The `User` object holds all the information for a user of your application and provides a set of methods to manage their account. Users have a unique authentication identifier which might be their email address, phone number or a username.
+The `User` object holds all of the information for a single user of your application and provides a set of methods to manage their account. Each user has a unique authentication identifier which might be their email address, phone number, or a username.
 
-Users can be contacted at their primary email address or primary phone number. They can have more than one registered email address, but only one of them will be their primary email address. Same thing with phone numbers; they can have more than one, but only one will be their primary. At the same time, they can also have one more more external accounts by connecting to OAuth providers such as Google, Apple, Facebook & many more.
+A user can be contacted at their primary email address or primary phone number. They can have more than one registered email address, but only one of them will be their primary email address. This goes for phone numbers as well; a user can have more than one, but only one phone number will be their primary. At the same time, a user can also have one or more external accounts by connecting to [OAuth providers](/docs/authentication/social-connections/overview) such as Google, Apple, Facebook, and many more.
 
-Finally, `User` objects hold profile data like their name, a profile image and a set of metadata that can be used internally to store arbitrary information. The metadata are split into public and private. Both types are set from the [Backend API](https://clerk.dev/docs/reference/backend-api), but public metadata can be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) and [Backend API](https://clerk.dev/docs/reference/backend-api).
+Finally, a `User` object holds profile data like the user's name, profile picture, and a set of [metadata](/docs/users/metadata) that can be used internally to store arbitrary information. The metadata are split into `publicMetadata` and `privateMetadata`. Both types are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can also be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference).
 
 The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to help retrieve and update user information and authentication status.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [<code>id</code>,  <code>string</code>,  <>A unique identifier for the user.</>]},
-{cells: [<code>firstName</code>,  <code>string | null</code>,  <>The user's first name.</>]},
-{cells: [<code>lastName</code>,  <code>string</code>,  <>The user's last name.</>]},
-{cells: [<code>fullName</code>,  <code>string | null</code>,  <>The user's full name.</>]},
-{cells: [<code>username</code>,  <code>string | null</code>,  <>The user's username.</>]},
-{cells: [<code>imageUrl</code>,  <code>string</code>,  <>Holds the users profile image or avatar.</>]},
-{cells: [<code>profileImageUrl</code>,  <code>string | null</code>,  <>The URL for the user's profile image. (deprecated in favor of image_url)</>]},
-{cells: [<code>primaryEmailAddress</code>,  <code><a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> | null</code>,  <>Information about the user's primary email address.</>]},
-{cells: [<code>primaryEmailAddressId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> that the user has set as primary.</>]},
-{cells: [<code>emailAddresses</code>,  <code><a href="/docs/references/javascript/email-address/email-address">EmailAddress</a>[]</code>,  <>Any array of all the <a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> objects associated with the user. Includes the primary.</>]},
-{cells: [<code>hasVerifiedEmailAddress</code>,  <code>boolean</code>,  <>A getter boolean to check if the user has verified an email address.</>]},
-{cells: [<code>primaryPhoneNumber</code>,  <code><a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a>[] | null</code>,  <>Information about the user's primary phone number.</>]},
-{cells: [<code>primaryPhoneNumberId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a> that the user has set as primary.</>]},
-{cells: [<code>phoneNumbers</code>,  <code><a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a>[]</code>,  <>Any array of all the <a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a> objects associated with the user. Includes the primary.</>]},
-{cells: [<code>hasVerifiedPhoneNumber</code>,  <code>boolean</code>,  <>A getter boolean to check if the user has verified a phone number.</>]},
-{cells: [<code>primaryWeb3WalletId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
-{cells: [<code>primaryWeb3Wallet</code>,  <code><a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a></code>,  <>The <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
-{cells: [<code>web3Wallets</code>,  <code><a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a>[]</code>,  <>Any array of all the <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a> objects associated with the user. Includes the primary.</>]},
-{cells: [<code>externalAccounts</code>,  <code><a href="/docs/references/javascript/external-account">ExternalAccount</a>[]</code>,  <>An array of all the <a href="/docs/references/javascript/external-account">ExternalAccount</a> objects associated with the user via OAuth.  <strong>Note</strong>: This includes both verified &amp; unverified external accounts.</>]},
-{cells: [<code>verifiedExternalAccounts</code>,  <code><a href="/docs/references/javascript/external-account">ExternalAccount</a>[]</code>,  <>A getter for the user's list of verified external accounts.</>]},
-{cells: [<code>unverifiedExternalAccounts</code>,  <code><a href="/docs/references/javascript/external-account">ExternalAccount</a>[]</code>,  <>A getter for the user's list of unverified external accounts.</>]},
-{cells: [<code>samlAccounts</code>,  <code>SamlAccount[]</code>,  <>An <strong>experimental</strong> list of saml accounts associated with the user.</>]},
-{cells: [<code>organizationMemberships</code>,  <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code>,  <>A list of <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code>s representing the list of organizations the user is member with.</>]},
-{cells: [<code>passwordEnabled</code>,  <code>boolean</code>,  <>A boolean indicating whether the user has a password on their account.</>]},
-{cells: [<code>totpEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled TOTP by generating a TOTP secret and verifying it via an authenticator ap</>]},
-{cells: [<code>twoFactorEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled two-factor authentication.</>]},
-{cells: [<code>backupCodeEnabled</code>,  <code>boolean</code>,  <>Whether the user has enabled Backup codes.</>]},
-{cells: [<code>createOrganizationEnabled</code>,  <code>boolean</code>,  <>Whether the organization creation is enabled for the user or not.</>]},
-{cells: [<code>deleteSelfEnabled</code>,  <code>boolean</code>,  <>Whether the user is able to delete their own account or not.</>]},
-{cells: [<code>publicMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read from the <a href="https://reference.clerk.dev/reference/frontend-api-reference">Frontend API</a> and <a href="https://clerk.dev/docs/reference/backend-api">Backend API</a> and can be set only from the Backend API .</>]},
-{cells: [<code>unsafeMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read and set from the frontend. One common use case for this attribute is to use it to implement custom fields that will be attached to the <code>User</code> object. Please note that there is also an <code>unsafeMetadata</code> attribute in the SignUp object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete.</>]},
-{cells: [<code>lastSignInAt</code>,  <code>Date</code>,  <>Date when the user last signed in. May be empty if the user has never signed in.</>]},
-{cells: [<code>createdAt</code>,  <code>Date</code>,  <>Date when the user was first created.</>]},
-{cells: [<code>updatedAt</code>,  <code>Date</code>,  <>Date of the last time the user was updated.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for the user. |
+| `firstName` | `string \| null` | The user's first name. |
+| `lastName` | `string \| null` | The user's last name. |
+| `fullName` | `string \| null` | The user's full name. |
+| `username` | `string \| null` | The user's username. |
+| `imageUrl` | `string` | Holds the users profile image or avatar. |
+| `profileImageUrl` | `string \| null` | The URL for the user's profile image.<br />**This property is deprecated** in favor of `image_url` |
+| `primaryEmailAddress` | [`EmailAddress`](/docs/references/javascript/email-address/email-address) \| `null` | Information about the user's primary email address. |
+| `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
+| `emailAddresses` | <code><a href="/docs/references/javascript/email-address/email-address">EmailAddress[]</a></code> | An array of all the `EmailAddress` objects associated with the user. Includes the primary. |
+| `hasVerifiedEmailAddress` | `boolean` | A getter boolean to check if the user has verified an email address. |
+| `primaryPhoneNumber` | [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) \| `null` | Information about the user's primary phone number. |
+| `primaryPhoneNumberId` | `string \| null` | The unique identifier for the `PhoneNumber` that the user has set as primary. |
+| `phoneNumbers` | <code><a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber[]</a></code> | An array of all the `PhoneNumber` objects associated with the user. Includes the primary. |
+| `hasVerifiedPhoneNumber` | `boolean` | A getter boolean to check if the user has verified a phone number. |
+| `primaryWeb3WalletId` | `string \| null` | The unique identifier for the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) that the user signed up with. |
+| `primaryWeb3Wallet` | [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) \| `null` | The `Web3Wallet` that the user signed up with. |
+| `web3Wallets` | <code><a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet[]</a></code> | An array of all the `Web3Wallet` objects associated with the user. Includes the primary. |
+| `externalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | An array of all the `ExternalAccount` objects associated with the user via OAuth.<br />**Note**: This includes both verified & unverified external accounts. |
+| `verifiedExternalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | A getter for the user's list of verified external accounts. |
+| `unverifiedExternalAccounts` | <code><a href="/docs/references/javascript/external-account">ExternalAccount[]</a></code> | A getter for the user's list of unverified external accounts. |
+| `samlAccounts` | `SamlAccount[]` | An **experimental** list of saml accounts associated with the user. |
+| `organizationMemberships` | <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership[]</a></code> | A list of `OrganizationMembership`s representing the list of organizations the user is member with. |
+| `passwordEnabled` | `boolean` | A boolean indicating whether the user has a password on their account. |
+| `totpEnabled` | `boolean` | A boolean indicating whether the user has enabled TOTP by generating a TOTP secret and verifying it via an authenticator ap |
+| `twoFactorEnabled` | `boolean` | A boolean indicating whether the user has enabled two-factor authentication. |
+| `backupCodeEnabled` | `boolean` | A boolean indicating whether the user has enabled Backup codes. |
+| `createOrganizationEnabled` | `boolean` | A boolean indicating whether the organization creation is enabled for the user or not. |
+| `deleteSelfEnabled` | `boolean` | A boolean indicating whether the user is able to delete their own account or not. |
+| `publicMetadata` | `{[string]: any} \| null` | Metadata that can be read from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) and [Backend API](https://clerk.dev/docs/reference/backend-api) and can be set only from the Backend API . |
+| `privateMetadata` | `{[string]: any} \| null` | Metadata that can be read and set only from the [Backend API](https://clerk.dev/docs/reference/backend-api). |
+| `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
+| `lastSignInAt` | `Date` | Date when the user last signed in. May be empty if the user has never signed in. |
+| `createdAt` | `Date` | Date when the user was first created. |
+| `updatedAt` | `Date` | Date of the last time the user was updated. |
 
 ## Methods
 
@@ -73,25 +66,16 @@ Updates the user's attributes. Use this method to save information you collected
 #### `UpdateUserParams`
 
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>username</code>, <code>string</code>, <>The user's username.</>]},
-{cells: [<code>password</code>, <code>string</code>, <>
-The user's password.
-<br/>
-<br/>
-<strong>This property is deprecated.</strong> This will be removed in the next major version. Please use <a href="/docs/references/javascript/user/password-management#updatepassword"><code>updatePassword(params)</code></a> instead
-</>]},
-{cells: [<code>firstName</code>, <code>string</code>, <>The user's first name.</>]},
-{cells: [<code>lastName</code>, <code>string</code>, <>The user's last name.</>]},
-{cells: [<code>primaryEmailAddressId</code>, <code>string</code>, <>The unique identifier for the <a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> that the user has set as primary.</>]},
-{cells: [<code>primaryPhoneNumberId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a> that the user has set as primary.</>]},
-{cells: [<code>primaryWeb3WalletId</code>,  <code>string | null</code>,  <>The unique identifier for the <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a> that the user signed up with.</>]},
-{cells: [<code>unsafeMetadata</code>,  <code>{"{[string]: any} | null"}</code>,  <>Metadata that can be read and set from the frontend. One common use case for this attribute is to use it to implement custom fields that will be attached to the <code>User</code> object. Please note that there is also an <code>unsafeMetadata</code> attribute in the SignUp object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete.</>]},
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `username` | `string` | The user's username. |
+| `password` | `string` | The user's password.<br />**This property is deprecated.** This will be removed in the next major version. Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#updatepassword) instead. |
+| `firstName` | `string` | The user's first name. |
+| `lastName` | `string` | The user's last name. |
+| `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`](/docs/references/javascript/email-address/email-address) that the user has set as primary. |
+| `primaryPhoneNumberId` | `string` | The unique identifier for the [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) that the user has set as primary. |
+| `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) that the user signed up with. |
+| `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
 
 ### `delete()`
 
@@ -111,16 +95,11 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 #### `SetProfileImageParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>file</code>, <code>Blob | File | string | null</code>, <>The file to set as the user's profile image.</>]}
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `file` | `Blob \| File \| string \| null` | The file to set as the user's profile image. |
 
 #### Returns
-
 
 <Tables
   headings={["Type", "Description"]}
@@ -133,15 +112,11 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 ##### `ImageResource`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string | undefined | null</code>, <>The unique identifier of the image.</>]},
-{cells: [<code>name</code>, <code>string | null</code>, <>The name of the image.</>]},
-{cells: [<code>publicUrl</code>, <code>string | null</code>, <>The publically accessible url for the image.</>]}
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | The unique identifier of the image. |
+| `name` | `string \| null` | The name of the image. |
+| `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
 
 ### `getSessions()`
@@ -174,16 +149,9 @@ A check whether or not the given resource is the primary identifier for the user
 
 #### Params
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>ident</code>, <code>
-<a href="/docs/references/javascript/email-address/email-address">EmailAddress</a> | <a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a> | <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a>
-</code>, <>The resource checked against the user to see if it is the primary identifier.</>]},
- ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `ident` | [`EmailAddress`](/docs/references/javascript/email-address/email-address) \| [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) \| [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) | The resource checked against the user to see if it is the primary identifier. |
 
 ## Additional methods
 
