--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -5,7 +5,7 @@ description: Clerk provides various options for setting up a sign-up flow.
 
 # Sign-up options
 
-Clerk provides various options for setting up a sign-up flow. These options are configurable from the Clerk Dashboard. When a new application is created, you will be presented with the following screen:
+Clerk provides various options for setting up a sign-up flow. These options are configurable from the [Clerk Dashboard](https://dashboard.clerk.com/). When a new application is created, you will be presented with the following screen:
 
 <Images 
 width={1879}
@@ -16,7 +16,7 @@ alt="An interactive builder for customizing your <SignIn /> component, which inc
 
 In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#choose-identifiers), [authentication strategy](#choose-authentication-strategy), [social login providers](#choose-social-login-providers), and [Web3 authentication](#choose-web3-authentication).
 
-You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to **User & Authentication settings**.
+You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to the [User & Authentication](https://dashboard.clerk.com/last-active?path=user-authentication) settings.
 
 ## Choose identifiers
 
@@ -48,7 +48,7 @@ For each provider, Clerk offers a shared profile that can be used for developmen
 
 ## Choose Web3 authentication
 
-Clerk provides Web3 authentication as an option with MetaMask. As part of validating the accuracy of the returned Web3 account address, Clerk handles the signing of a transaction and verifying the signature. Because sign in with MetaMask uses the same abstraction as our other authentication factors like passwords or magic links, other Clerk features like multi-factor authentication and profile enrichment work for MetaMask users out-of-the-box.
+Clerk provides [Web3 authentication](/docs/users/web3-wallets) as an option with MetaMask. As part of validating the accuracy of the returned Web3 account address, Clerk handles the signing of a transaction and verifying the signature. Because sign-in with MetaMask uses the same abstraction as our other authentication factors, like passwords or magic links, other Clerk features like multi-factor authentication and profile enrichment work for MetaMask users out-of-the-box.
 
 ## Set up multifactor authentication
 
