update image paths

--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -26,7 +26,7 @@ Denotes the duration after which a session will expire and the user will have to
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/session-options/inactivity-timeout.png"
+src="/docs/images/authentication/session-options/inactivity-timeout.jpg"
 alt="The 'Sessions' configuration section in the Clerk Dashboard with a red outline around the 'Inactivity timeout' section. This option is toggled on, revealing an input for customizing the time duration until inactivity timeout. A red arrow is pointing to the 'Apply Changes' button."
 />
 
@@ -37,7 +37,7 @@ Denotes the duration after which a session will expire and the user will have to
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/session-options/maximum-lifetime.png"
+src="/docs/images/authentication/session-options/maximum-lifetime.jpg"
 alt="The 'Sessions' settings in the Clerk Dashboard with a red outline around the 'Maximum lifetime' section. This option is toggled on, revealing an input for customizing duration of a session lifetime."
 />
 
@@ -50,7 +50,7 @@ To enable this feature in your application, you simply need to toggle on the **M
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/session-options/multisession-handling.png"
+src="/docs/images/authentication/session-options/multisession-handling.jpg"
 alt="The 'Multi-session handling' section under the 'Sessions' settings in the Clerk Dashboard. A red arrow is pointing to the 'Multi-session handling' toggle, which is toggled on, and there is also a red arrow pointing to the 'Apply Changes' button."
 />
 
@@ -65,7 +65,7 @@ To add custom claims to the session token, navigate to the [Sessions](https://da
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/session-options/customize-session-token.png"
+src="/docs/images/authentication/session-options/customize-session-token.jpg"
 alt="The 'Customize session token' section under the 'Sessions' settings in the Clerk Dashboard. A red arrow is pointing to the 'Edit' button."
 />
 
