--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -57,7 +57,7 @@ Although not available as an option in the initial new application screen, you c
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/custom-flows/multifactor.png"
+src="/docs/images/custom-flows/multifactor.jpg"
 alt="The 'Multi-factor authentication' tab under the 'User & Authentication' section of the Clerk Dashboard."
 />
 
@@ -68,7 +68,7 @@ The allowlist feature allows you to control who can get access to your applicati
 <Images 
 width={3024}
 height={1652}
-src="/docs/images/authentication/restrictions.png"
+src="/docs/images/authentication/restrictions.jpg"
 alt="The 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard."
 />
 
